--- a/packages/nextjs/styles/textbox.css
+++ b/packages/nextjs/styles/textbox.css
@@ -1,2 +1,32 @@
-/* 
-the style for the textbox component/*
+
+.text-box{
+    position: fixed;
+    bottom: 0;
+    left: 60px;
+    width: calc(100% - 120px);
+    height: 200px;
+    background-color: #000;
+    overflow: hidden;
+    border-radius: 12px;
+}
+
+.text-box > p {
+    margin-top: 64px;
+    margin-bottom: 12px;
+    margin-left: 64px;
+    margin-right: 64px;
+    font-size: 72px;
+    color: var(--font-color);
+}
+
+.speaker-img {
+    position: fixed;
+    bottom: 0;
+    right: 64px;
+    width: 400px;
+    height: auto;
+    border-radius: 50%;
+    pointer-events: none;
+    user-select: none;
+    z-index: 11;
+  }
