--- a/packages/nextjs/styles/index.css
+++ b/packages/nextjs/styles/index.css
@@ -1,3 +1,45 @@
 /*
 the global syle called init to differentiate from globals.css in order to keep the other file for testing purposes
 */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+@font-face {
+ 
+}
+
+:root {
+  --width: 1920;
+  --height: 1080;
+  --font-color: #ffffff;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  position: relative;
+  margin: 0;
+}
+
+#ui {
+  position: absolute; 
+  top: 50%;
+  left: 50%;
+  width: calc(var(--width) * 1px);
+  height: calc(var(--height) * 1px);
+  transform: translate(-50%, -50%) scale(var(--scale, 0));
+  transform-origin: center;
+  box-sizing: border-box;
+  z-index: 10;
+  user-select: none;
+  pointer-events: none;
+}
+
