--- a/packages/nextjs/styles/textbox.css
+++ b/packages/nextjs/styles/textbox.css
@@ -4,26 +4,32 @@
     bottom: 0;
     left: 60px;
     width: calc(100% - 120px);
-    height: 200px;
+    height: 150px;
     background-color: #000;
     overflow: hidden;
     border-radius: 12px;
 }
 
-.text-box > p {
-    margin-top: 64px;
+.text-box {
+    margin-top: 24px;
     margin-bottom: 12px;
-    margin-left: 64px;
-    margin-right: 64px;
-    font-size: 72px;
+    margin-left: 24px;
+    margin-right: 24px;
+    font-size: 35px; /* Aumenta la dimensione del font per il contenuto */
     color: var(--font-color);
+}
+
+.click-enter-hint {
+    font-size: 18px; /* Rende il testo più piccolo */
+    color: #888; 
+    margin-top: 12px;
 }
 
 .speaker-img {
     position: fixed;
     bottom: 0;
     right: 64px;
-    width: 400px;
+    width: 250px;
     height: auto;
     border-radius: 50%;
     pointer-events: none;
